# ig_reader

./: .gitignore  README.md  TODO  profiles.txt  proxy.py  pyproject.toml  requirements.txt  scrapper.py  strory_scrapper.py  test.py
scrapper/: profile.txt  scrapper.py
tools/: proxy.py
